src/snapshots/pbsql__tests__translator__and_another.snap
---
source: src/lib.rs
expression: report
---
database_names:
  ~/books/matches: main
  ~/books/things: db1
translated_query:
  Ok:
    - - SELECT
      - "  \"id\""
      - FROM
      - "  ("
      - "    SELECT"
      - "      db1.table_contents.id AS \"id\","
      - "      0 AS \"num_matches\""
      - "    FROM"
      - "      db1.table_contents"
      - "      LEFT JOIN main.table_contents ON ("
      - "        main.table_contents.winner_id = db1.table_contents.id"
      - "        OR main.table_contents.loser_id = db1.table_contents.id"
      - "      )"
      - "    WHERE"
      - "      main.table_contents.loser_id IS NULL"
      - "    UNION"
      - "    ALL"
      - "    SELECT"
      - "      \"winner_id\" AS \"id\","
      - "      1 AS \"num_matches\""
      - "    FROM"
      - "      main.table_contents"
      - "    UNION"
      - "    ALL"
      - "    SELECT"
      - "      \"loser_id\" AS \"id\","
      - "      1 AS \"num_matches\""
      - "    FROM"
      - "      main.table_contents"
      - "  ) AS \"sq\""
      - GROUP BY
      - "  \"id\""
      - ORDER BY
      - "  sum(\"num_matches\")"
      - LIMIT
      - "  ?"
original_query:
  - "select \"id\""
  - from (
  - "    select"
  - "        \"~/books/things\".\"id\" as \"id\","
  - "        0 as \"num_matches\" from \"~/books/things\""
  - "    left join \"~/books/matches\" on ("
  - "        \"~/books/matches\".\"winner_id\" = \"~/books/things\".\"id\""
  - "        or \"~/books/matches\".\"loser_id\" = \"~/books/things\".\"id\""
  - "    )"
  - "    where \"~/books/matches\".\"loser_id\" is null"
  - ""
  - "    union all"
  - ""
  - "    select \"winner_id\" as \"id\", 1 as \"num_matches\" from \"~/books/matches\""
  - ""
  - "    union all"
  - ""
  - "    select \"loser_id\" as \"id\", 1 as \"num_matches\" from \"~/books/matches\""
  - ") as \"sq\""
  - "group by \"id\""
  - "order by sum(\"num_matches\")"
  - limit ?
