src/snapshots/pbsql__tests__translator__union_in_subquery.snap
---
source: src/lib.rs
expression: report
---
database_names:
  ~/books/matches: main
  ~/books/things: db1
translated_query:
  Ok:
    - - SELECT
      - "  \"sq\".id,"
      - "  \"sq\".num_matches"
      - FROM
      - "  ("
      - "    SELECT"
      - "      \"books\".id,"
      - "      0 AS \"num_matches\""
      - "    FROM"
      - "      db1.table_contents AS \"books\""
      - "      LEFT JOIN main.table_contents AS \"matches\" ON ("
      - "        \"books\".id = \"matches\".winner_id"
      - "        OR \"books\".id = \"matches\".loser_id"
      - "      )"
      - "    WHERE"
      - "      \"matches\".loser_id IS NULL"
      - "    UNION"
      - "    ALL"
      - "    SELECT"
      - "      winner_id AS \"id\","
      - "      1 AS \"num_matches\""
      - "    FROM"
      - "      main.table_contents"
      - "    UNION"
      - "    ALL"
      - "    SELECT"
      - "      loser_id AS \"id\","
      - "      1 AS \"num_matches\""
      - "    FROM"
      - "      main.table_contents"
      - "  ) AS \"sq\""
      - GROUP BY
      - "  \"sq\".id"
      - ORDER BY
      - "  sum(\"sq\".num_matches) ASC"
      - LIMIT
      - "  ?"
original_query:
  - SELECT
  - "    sq.id, sq.num_matches"
  - FROM (
  - "    SELECT books.id, 0 AS \"num_matches\""
  - "    FROM \"~/books/things\" AS \"books\""
  - "    LEFT JOIN \"~/books/matches\" AS \"matches\""
  - "    ON ("
  - "        books.id = matches.winner_id"
  - "        OR books.id = matches.loser_id"
  - "    )"
  - "    WHERE matches.loser_id IS NULL"
  - ""
  - "    UNION ALL"
  - ""
  - "    SELECT winner_id AS \"id\", 1 AS \"num_matches\""
  - "    FROM \"~/books/matches\""
  - ""
  - "    UNION ALL"
  - ""
  - "    SELECT loser_id AS \"id\", 1 AS \"num_matches\""
  - "    FROM \"~/books/matches\""
  - ") AS \"sq\""
  - GROUP BY sq.id
  - ORDER BY sum(sq.num_matches) ASC
  - LIMIT ?
